--- a/FrontEnd/html/cart.html
+++ b/FrontEnd/html/cart.html
@@ -13,7 +13,8 @@
         <!-- 顶部栏复用 -->
         <div class="top-bar">
             <span class="site">
-                <a href="./home.html">首页</a><i class="iconfont">&#xe635;</i>位置
+                <a href="./home.html"><i class="iconfont">&#xe8c6;</i>首页</a>
+                <i class="iconfont">&#xe635;</i>位置
             </span>
             <a href="#" class="a-top" id="profile">个人中心</a>
             <span class="split-line a-top"></span>
@@ -39,7 +40,7 @@
             
             <div class="search-bar banner-bar-children">
                 <input placeholder="搜索栏" class="search-inp">
-                <span class='serach-btn' id="search-btn">按钮</span>
+                <a class='search-btn' id="" href="result.html">搜索</a>
             </div>
         </div>
 
