--- a/FrontEnd/html/home.html
+++ b/FrontEnd/html/home.html
@@ -13,11 +13,12 @@
         <div class="fixed-bar" id="fixed-bar">
             <div class="search-bar banner-bar-children">
                 <input placeholder="搜索栏" class="search-inp">
-                <span class='serach-btn' id="search-btn">按钮</span>
+                <a class='search-btn' id="" href="result.html">搜索</a>
             </div>
         </div>
         <div class="top-bar">
             <span class="site">
+                <a href="./home.html"><i class="iconfont">&#xe8c6;</i>首页</a>
                 <i class="iconfont">&#xe635;</i>位置
             </span>
             <a href="#" class="a-top" id="profile">个人中心</a>
@@ -40,7 +41,7 @@
             </div>
             <div class="search-bar banner-bar-children">
                 <input placeholder="搜索栏" class="search-inp">
-                <span class='serach-btn' id="search-btn">按钮</span>
+                <a class='search-btn' id="" href="result.html">搜索</a>
                 
             </div>
             
